--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="script_raw.js"></script>
 </head>
+
 <body>
     <div class="container">
         <h1 id="page-title">🎵 MyJonCraft SGS Music</h1>
@@ -23,6 +25,11 @@
             </select>
         </div>
 
+        <div style="margin: 15px 0;">
+            <input type="text" id="search-input" placeholder="Buscar canción..."
+                style="padding: 5px; width: 80%; max-width: 400px;">
+        </div>
+
         <div id="music-list"></div>
 
         <footer style="margin-top:20px; opacity:0.7;">
@@ -30,4 +37,5 @@
         </footer>
     </div>
 </body>
+
 </html>
